# rsomics-fligner

./: Cargo.toml  README.md
benches/: fligner.rs
src/: cli.rs  fligner.rs  igamc.rs  lib.rs  ndtri.rs  rank.rs
tests/: compat.rs
tests/golden/: doc_a.tsv  doc_b.tsv  doc_c.tsv  expected.tsv  k5_long.tsv  large_long.tsv  mean_a.tsv  mean_b.tsv  mean_c.tsv  nan_a.tsv  tie_a.tsv  tie_b.tsv  tie_c.tsv  trim_a.tsv  trim_b.tsv  trim_c.tsv  two_a.tsv  two_b.tsv
