[package]
name = "rsomics-fligner"
version = "0.1.1"
description = "Fligner-Killeen test for equal variances (rank-based, median/mean/trimmed centering) with the chi-squared p-value — scipy.stats.fligner equivalent, value-exact"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-fligner"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "fligner", "fligner-killeen", "variance", "scipy"]
readme = "README.md"

[[bin]]
name = "rsomics-fligner"
path = "src/main.rs"

[lib]
name = "rsomics_fligner"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fligner"
harness = false
